Fix bug where for in declarations could be reference from the right side of the in-expression
This led to StackOverflowError's in some cases